--- a/b707112ee3834a61a2c35364af6a136e.opf/meta.yml
+++ b/b707112ee3834a61a2c35364af6a136e.opf/meta.yml
@@ -5,6 +5,6 @@ source_metadata:
     e93005d8b2964aab9b53bf244b46500b:
       base_file: v041.txt
       image_group_id: I1PD95886
-      title: ''
+      title: ཞེན་ལོག་སྒྲོན་མ།
       total_pages: 1349
       volume_number: 41
