--- a/D5D2C2D7E.opf/index.yml
+++ b/D5D2C2D7E.opf/index.yml
@@ -4,8 +4,8 @@ revision: '00001'
 annotations:
   a74ee50fb0b9458c8bd7c5ab170a92aa:
     parts: {}
+    work_id: D3729
     span:
-    - vol: 41
+    - base: 6e40
       start: 0
       end: 19579
-    work_id: D3729
